@@ -88,6 +88,9 @@ class LXMLTreeBuilderForXML(TreeBuilder):
         self.nsmaps = None
 
     def start(self, name, attrs, nsmap={}):
+        # Make sure attrs is a mutable dict--lxml may send an immutable dictproxy.
+        attrs = dict(attrs)
+
         nsprefix = None
         # Invert each namespace map as it comes in.
         if len(nsmap) == 0 and self.nsmaps != None:
